# rust_routing

./: README.md
graph/: Cargo.toml
graph/src/: graph.py  lib.rs  main-gpkg.rs  main.rs
graph/test_data/: akadem-tiny.osm.pbf  ilyicha-1.osm.pbf
osmio2/: Cargo.toml
osmio2/src/: lib.rs  reader.rs  writer.rs
osmreader/src/: errors.rs  objects.rs
route/: Cargo.toml
route/data/: kapchagai.csv  test-graph.csv
route/data/alt/: route_0.csv  visited_0.csv  visited_5.csv
route/data/astar/: route_0.csv  route_5.csv  visited_0.csv  visited_5.csv
route/src/: debug.rs  errors.rs  graph.rs  hedgehog.rs  isochrone.rs  lib.rs  matrix.rs  objects.rs  serialize_wkt.rs  sortable.rs  traits.rs
