[package]
name = "osmreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
bzip2 = "0.3"
flate2 = "1.0"
indicatif = "0.17"
quick-xml = {version = "0.23", features = ["encoding"]}  # 0.23 because newer version does not compile in Ubuntu's rust
serde = {version = "1", features = ["derive"] }
geo = "0.23"
wkt = {version = "0.10", features = ["geo-types", "serde"] }
